static/css/base.css
:root {
    --block-content-width: 60%;
    --body-background-color: black;
    --body-color: white;
    --body-font-size: 25px;
    --text-font-size: 16px;
}

body.dark {
    --body-background-color: black;
    --body-color: white;
}

body.light {
    --body-background-color: white;
    --body-color: black;
}

body {
    padding: 0, 10px;
    margin: 0;
    background-color: var(--body-background-color);
    color: var(--body-color);
    font-size: var(--body-font-size);
}

.container {
    display: flex;
    flex-direction: row;
    height: 100vh;
}

aside {
    width: 210px;
    transition: width 0.3s ease;
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    overflow: hidden;

}

/* > говорит чтобы только главный элемент учитывался */
aside:has(> details:not([open])) {
    width: 60px;

}

aside a {
    text-decoration: none;
    width: 100%;
    box-sizing: border-box;
    text-align: center;
    white-space: nowrap;
    overflow: hidden;
    color: var(--body-color);
    border: 2px solid var(--body-color);
    padding: 10px;
    display: inline-block;
    transition: 0.2s;
    flex-shrink: 0;
}

aside a:hover {
    background-color: var(--body-color);
    color: var(--body-background-color);
}

main {
    padding: 0px 25px;
    overflow-y: auto;
    display: flex;
    flex-grow: 1;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

@keyframes showPanelOnLoad {
    0% {
        transform: translateY(0);
    }

    75% {
        transform: translateY(0);
    }

    100% {
        transform: translateY(-100%);
    }
}

.button {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;

    background: none;
    color: var(--body-color);
    font: inherit;
    outline: none;

    height: 40px;
    width: auto;
    border: 1px solid var(--body-color);
    cursor: pointer;
    user-select: none;
    text-decoration: none;
    transition: background-color 0.2s, color 0.2s, border-color 0.2s;
}

.button:disabled {
    background-color: var(--body-background-color);
    color: var(--body-color);
    border-color: var(--body-color);
    cursor: not-allowed;
    opacity: 0.2;
}

.button.disabled {
    opacity: 0.4;
    pointer-events: none;
    cursor: not-allowed;
    user-select: none;
}

.button:hover:not(:disabled) {
    background-color: var(--body-color);
    color: var(--body-background-color);
}

.button-back {
    width: auto;
    margin-right: auto;
}

.button-group {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 10px;
    position: sticky;
    top: 0;
    background-color: var(--body-background-color);
    width: 100%;
    padding: 10px 20px;
    box-sizing: border-box;
    transition: transform 0.3s ease-in-out;
    /* transform: translateY(-100%); --------------- COMMENT FOR DEBUG */
    /* animation: showPanelOnLoad 4.5s ease-in-out;  COMMENT FOR DEBUG */
    z-index: 1000;
}

.button-group::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 0;
    width: 100%;
    height: 30px;
}

.button-group:hover {
    animation: none;
    transform: translateY(0);
}

.settings-button {
    margin-left: auto;
}

.settings-panel {
    color: var(--body-color);
    width: 100px;
    height: 100vh;
    background-color: var(--body-background-color);
    border: 4px solid red;
    /* padding: 20px red; */
}

summary svg {
    fill: var(--body-color);
    height: 40px;
    width: 50px;
}

summary:hover svg {
    fill: var(--body-background-color);
}


.output {
    width: 100%;
    max-width: var(--block-content-width);
    font-size: var(--text-font-size);
    transition: max-width 0.3s ease;
}

summary {
    list-style: none;
    cursor: pointer;
    user-select: none;
    height: 40px;
    padding: 10px;
    border: 1px solid var(--body-color);
    text-align: center;
    transition: background-color 0.3s ease;
}

summary:hover {
    background-color: var(--body-color);
    color: var(--body-background-color);
}

.aside-links details a {
    margin-left: 10px;
    width: calc(100% - 10px);
}

.aside-links {
    display: flex;
    flex-direction: column;
    height: calc(100vh - 80px);
}

.reset-button {
    background: none;
    border: none;
    font: inherit;
    cursor: pointer;
    outline: none;
}

.menu-container {
    display: flex;
    flex-direction: row;
    gap: 20px;
}

.btn-primary {
    height: 50px;
    width: 60px;
    cursor: pointer;
}

.aside-item {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
    padding: 4px 0px;
    border-bottom: 1px solid var(--body-color);
}

.aside-item:hover .aside-menu {
    opacity: 1;
}

.aside-link {
    flex: 1;
    overflow: hidden;
    white-space: nowrap;
    color: var(--body-color);
}

.aside-menu {
    opacity: 0;
    cursor: pointer;
}

details.aside-menu[open] {
    opacity: 1;
}

.dropdown-content {
    position: absolute;
    right: 0;
    top: 100%;
    background: var(--body-background-color);
    border: 1.5px solid var(--body-color);
    z-index: 1000;
    min-width: 100px;
}

.dropdown-item {
    display: block;
    padding: 8px;
    color: var(--body-color);
    text-decoration: none;
    font-size: 12px;
}

.dropdown-delete-btn {
    background: none;
    border: none;
    width: 100%;
    text-align: left;
    color: red;
    cursor: pointer;
}

.three-dots {
    color: var(--body-color);
    height: 56px;
    list-style: none;
    font-size: 18px;
    padding: 0 5px;
}

.three-dots::-webkit-details-marker {
    display: none;
}

